--- a/demo-with-Java-Annotations/pom.xml
+++ b/demo-with-Java-Annotations/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.pivotal.playground</groupId>
+	<groupId>io.pivotal..gemfire.playground</groupId>
 	<artifactId>demo-java-annotations</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
