--- a/demo-with-cache-xml/pom.xml
+++ b/demo-with-cache-xml/pom.xml
@@ -25,7 +25,9 @@
         <spring.version>5.0.1.RELEASE</spring.version>
         <spring-data-releasetrain.version>Kay-SR1</spring-data-releasetrain.version>
         <spring-shell.version>1.2.0.RELEASE</spring-shell.version>
-        <gemfire.version>9.1.1</gemfire.version>		
+        <gemfire.version>9.2.0</gemfire.version>		
+        <maven.compiler.source>1.8</maven.compiler.source>
+    		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -45,7 +47,7 @@
 		<dependency>
 			<artifactId>geode-core</artifactId>
 			<groupId>io.pivotal.gemfire</groupId>
-			<version>9.1.1</version>
+			<version>9.2.0</version>
 		</dependency>
  		<dependency>
             <groupId>org.springframework.data</groupId>
@@ -109,7 +111,7 @@
 <dependency>
     <groupId>com.github.nyla-solutions</groupId>
     <artifactId>gedi-geode-extensions-core</artifactId>
-    <version>1.1.1</version>
+    <version>1.1.3</version>
 </dependency>
 
 		
