--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,14 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.sonatype.mavenbook.multispring</groupId>
+    <groupId>com.vmware</groupId>
     <artifactId>spring-geode-showcase-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
     <name>spring-geode-showcase-parent</name>
 
     <modules>
-	<module>demo-with-cache-xml</module>
-	<module>demo-with-java-annotations</module>
-	<module>demo-functions</module>
-	<module>demo-with-java-annotations-embedded</module>
+	     <module>applications/spring-geode-showcase</module>
     </modules>
     <build>
         <pluginManagement>
@@ -23,8 +20,8 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>11</source>
+                        <target>11</target>
                     </configuration>
                 </plugin>
             </plugins>
