--- a/applications/spring-geode-showcase/pom.xml
+++ b/applications/spring-geode-showcase/pom.xml
@@ -40,6 +40,11 @@
             <version>1.5.9</version>
         </dependency>
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-hateoas</artifactId>
+            <version>1.5.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
         </dependency>
