--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+/datastore/local/gg-setenv.sh
+/datastore/local/local-setenv.sh
