--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ buildNumber.properties
 !/.mvn/wrapper/maven-wrapper.jar
 /datastore/local/gg-setenv.sh
 /datastore/local/local-setenv.sh
+/cloud/GKE/local_setenv.sh
