--- a/cloud/k8/data-services/sp1/exercise1/gemfire1.yml
+++ b/cloud/k8/data-services/sp1/exercise1/gemfire1.yml
@@ -4,6 +4,7 @@ metadata:
   name: gemfire1
 spec:
   image: registry.pivotal.io/tanzu-gemfire-for-kubernetes/gemfire-k8s:1.0.1
+  antiAffinityPolicy: Cluster
   locators:
     replicas: 1
   servers:
