--- a/cloud/k8/apps/app.yml
+++ b/cloud/k8/apps/app.yml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    run:  spring-geode-showcase
-  name:  spring-geode-showcase
+    run:  account-rest-service
+  name:  account-rest-service
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name:  spring-geode-showcase
+      name:  account-rest-service
   template:
     metadata:
       labels:
-        name:  spring-geode-showcase
+        name:  account-rest-service
     spec:
       containers:
         - env:
@@ -21,5 +21,5 @@ spec:
                 configMapKeyRef:
                   name: gemfire1-config
                   key: locators
-          image: spring-geode-showcase:0.0.1-SNAPSHOT
-          name: spring-geode-showcase
+          image: nyla/account-rest-service:0.0.1-SNAPSHOT
+          name: account-rest-service
