--- a/cloud/k8/apps/wan/app-wan2.yml
+++ b/cloud/k8/apps/wan/app-wan2.yml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    run:  spring-geode-showcase-wan2
-  name:  spring-geode-showcase-wan2
+    run:  account-rest-service-wan2
+  name:  account-rest-service-wan2
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name:  spring-geode-showcase-wan2
+      name:  account-rest-service-wan2
   template:
     metadata:
       labels:
-        name:  spring-geode-showcase-wan2
+        name:  account-rest-service-wan2
     spec:
       containers:
         - env:
@@ -21,5 +21,5 @@ spec:
                 configMapKeyRef:
                   name: gemfire2-config
                   key: locators
-          image: spring-geode-showcase:0.0.1-SNAPSHOT
-          name: spring-geode-showcase-wan2
+          image: nyla/account-rest-service:0.0.1-SNAPSHOT
+          name: account-rest-service-wan2
