Adding Jdbc account web rest

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>components/account-domain</module>
 	     <module>applications/account-rest-service</module>
          <module>applications/account-location-rest-service</module>
+        <module>applications/account-jdbc-caching-rest-service</module>
     </modules>
     <build>
         <pluginManagement>
