Adding local workshop details

--- a/applications/account-location-rest-service/src/main/resources/application-local.properties
+++ b/applications/account-location-rest-service/src/main/resources/application-local.properties
@@ -3,4 +3,4 @@ spring.data.gemfire.security.password=CHANGEME
 #spring.data.gemfire.security.username=admin
 #spring.data.gemfire.security.password=admin
 server.port=8081
-spring.data.gemfire.pool.locators=gregoryg-a01.vmware.com[10334]
+spring.data.gemfire.pool.locators=localhost[10334]
