--- a/applications/account-location-rest-service/pom.xml
+++ b/applications/account-location-rest-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.3</version>
+        <version>2.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.github.ggreen</groupId>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.github.nyla-solutions</groupId>
             <artifactId>nyla.solutions.core</artifactId>
-            <version>1.4.3</version>
+            <version>1.4.5</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -103,7 +103,13 @@
 			<artifactId>geode-management</artifactId>
 			<version>${geode.version}</version>
 		</dependency>
-		<dependency>
+        <dependency>
+            <groupId>org.mockito.kotlin</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <version>4.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
 			<groupId>org.apache.geode</groupId>
 			<artifactId>geode-management</artifactId>
 			<version>${geode.version}</version>
