Adding event listener

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	     <module>applications/account-rest-service</module>
          <module>applications/account-location-rest-service</module>
         <module>applications/account-jdbc-caching-rest-service</module>
+        <module>applications/account-location-event-service</module>
     </modules>
     <build>
         <pluginManagement>
