--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 target/
 runtime/
+bin/
+applications/extended-languages/dotnet/bin/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -7,6 +9,7 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+*/Debug/*
 .mvn/timing.properties
 .DS_Store
 .classpath
