Adding manual 2 pool manually

--- a/applications/multi-cluster-demo-app/src/main/resources/application.yml
+++ b/applications/multi-cluster-demo-app/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
         gemfireone:
           locators: 127.0.0.1[10001]
         gemfiretwo:
-          locators: 127.0.0.1[10002]
+          locators:
+            host: 127.0.0.1
+            port: 10002
+            name: "GemFireTwo"
       cache:
         name: ${spring.application.name}
