--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>applications/gateway-load-balancer-service</module>
         <module>applications/multi-cluster-demo-app</module>
         <module>applications/spring-gf-redis-server</module>
+        <module>applications/kerberos-server</module>
     </modules>
     <build>
         <pluginManagement>
